--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native-stack": "^6.9.0",
     "@rneui/base": "^4.0.0-rc.6",
     "@rneui/themed": "^4.0.0-rc.6",
+    "axios": "^0.27.2",
     "react": "18.1.0",
     "react-native": "0.70.1",
     "react-native-safe-area-context": "^4.3.4",
